updated to bibtex file generated by zotero

--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -101,6 +101,9 @@
 Γιατί πρέπει να μελετηθεί η γεν. ποικ - διαφ
 
 Σημασία γενετικής ποικ Long term see introduction\textsuperscript{1}
+Selection may erode genetic diversity, which is a crucial factor for the
+success of breeding programs.
+
 Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ
 19\textsuperscript{2} τι γίνεται με τους καστανεώνες, δες Πετρόπουλος.
 βοήθεια σε προγρ βελτίωσης: Γανό σελ 22
@@ -190,73 +193,62 @@ gene flow
 \section{Βιβλιογραφία}
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-Pollegioni2011}{}%
+\leavevmode\hypertarget{ref-pollegioni_long-term_2011}{}%
 1. Pollegioni, P. \emph{et al.} Long-term human impacts on genetic
 structure of Italian walnut inferred by SSR markers. \emph{Tree Genetics
 \& Genomes} \textbf{7,} 707--723 (2011).
 
-\leavevmode\hypertarget{ref-Ganopoulos2013}{}%
-2. Ganopoulos, I.
-\(\Delta\)\(\iota\)\(\epsilon\)\(\rho\)\(\epsilon\)ύ\(\nu\)\(\eta\)\(\sigma\)\(\eta\)
-\(\gamma\)\(\epsilon\)\(\nu\)\(\epsilon\)\(\tau\)\(\iota\)\(\kappa\)ής
-\(\pi\)ο\(\iota\)\(\kappa\)\(\iota\)\(\lambda\)ό\(\tau\)\(\eta\)\(\tau\)\(\alpha\)ς,
-\(\tau\)\(\alpha\)\(\upsilon\)\(\tau\)ο\(\pi\)οί\(\eta\)\(\sigma\)\(\eta\)
-\(\kappa\)\(\alpha\)\(\iota\)
-\(\epsilon\)\(\phi\)\(\alpha\)\(\rho\)\(\mu\)ο\(\gamma\)ή
-\(\lambda\)\(\epsilon\)\(\iota\)\(\tau\)ο\(\upsilon\)\(\rho\)\(\gamma\)\(\iota\)\(\kappa\)ώ\(\nu\)
-\(\delta\)\(\epsilon\)\(\iota\)\(\kappa\)\(\tau\)ώ\(\nu\)
-\(\sigma\)\(\tau\)\(\eta\)\(\nu\)
-\(\kappa\)\(\epsilon\)\(\rho\)\(\alpha\)\(\sigma\)\(\iota\)ά (Prunus
-avium L.). 216 (2013).
+\leavevmode\hypertarget{ref-ganopoulos__2013}{}%
+2. Ganopoulos, I. Διερεύνηση γενετικής ποικιλότητας, ταυτοποίηση και
+εφαρμογή λειτουργικών δεικτών στην κερασιά (\emph{Prunus avium} L.).
+(2013).
 
-\leavevmode\hypertarget{ref-Petit2003}{}%
-3. Petit, R. J. \emph{et al.} Glacial refugia: Hotspots but not melting
-pots of genetic diversity. \emph{Science} \textbf{300,} 1563--1565
-(2003).
-
-\leavevmode\hypertarget{ref-Petit2005}{}%
-4. Petit, R. J. \emph{et al.} Comparative organization of chloroplast,
+\leavevmode\hypertarget{ref-petit_comparative_2005}{}%
+3. Petit, R. J. \emph{et al.} Comparative organization of chloroplast,
 mitochondrial and nuclear diversity in plant populations.
 \emph{Molecular Ecology} \textbf{14,} 689--701 (2005).
 
-\leavevmode\hypertarget{ref-Wang2010a}{}%
+\leavevmode\hypertarget{ref-petit_glacial_2003}{}%
+4. Petit, R. J. \emph{et al.} Glacial refugia: Hotspots but not melting
+pots of genetic diversity. \emph{Science} \textbf{300,} 1563--1565
+(2003).
+
+\leavevmode\hypertarget{ref-wang_recognizing_2010}{}%
 5. Wang, I. J. Recognizing the temporal distinctions between landscape
 genetics and phylogeography. \emph{Molecular Ecology} \textbf{19,}
 2605--2608 (2010).
 
-\leavevmode\hypertarget{ref-RCoreTeam2018}{}%
-6. R Core Team. \emph{R: A Language and Environment for Statistical
-Computing}. (R Foundation for Statistical Computing, 2018).
+\leavevmode\hypertarget{ref-r_core_team_r:_2018}{}%
+6. R Core Team. R: A Language and Environment for Statistical Computing.
+(2018).
 
-\leavevmode\hypertarget{ref-Jombart2008}{}%
-7. Jombart, T. adegenet: a R package for the multivariate analysis of
+\leavevmode\hypertarget{ref-jombart_adegenet:_2008}{}%
+7. Jombart, T. Adegenet: A R package for the multivariate analysis of
 genetic markers. \emph{Bioinformatics} \textbf{24,} 1403--1405 (2008).
 
-\leavevmode\hypertarget{ref-Kamvar2014}{}%
-8. Kamvar, Z. N., Tabima, J. F. \& Grünwald, N. J. Poppr : an R package
+\leavevmode\hypertarget{ref-kamvar_poppr_2014}{}%
+8. Kamvar, Z. N., Tabima, J. F. \& Grünwald, N. J. Poppr : An R package
 for genetic analysis of populations with clonal, partially clonal,
 and/or sexual reproduction. \emph{PeerJ} \textbf{2,} e281 (2014).
 
-\leavevmode\hypertarget{ref-Goudet2005}{}%
-9. Goudet, J. HIERFSTAT, a package for R to compute and test
-hierarchical F-statistics. \emph{Molecular Ecology Notes} \textbf{5,}
-184--186 (2005).
+\leavevmode\hypertarget{ref-goudet_hierfstat_2004}{}%
+9. Goudet, J. Hierfstat, a package for R to compute and test
+hierarchical F-statistics. (2004).
 
-\leavevmode\hypertarget{ref-Rousset2008}{}%
-10. Rousset, F. genepop'007: a complete re-implementation of the genepop
+\leavevmode\hypertarget{ref-rousset_genepop007:_2008}{}%
+10. Rousset, F. Genepop'007: A complete re-implementation of the genepop
 software for Windows and Linux. \emph{Molecular Ecology Resources}
 \textbf{8,} 103--106 (2008).
 
-\leavevmode\hypertarget{ref-Takezaki1996}{}%
+\leavevmode\hypertarget{ref-takezaki_genetic_1996}{}%
 11. Takezaki, N. \& Nei, M. Genetic distances and the setting of
 conservation priorities. \emph{Biological Conservation} \textbf{75,} 311
 (1996).
 
-\leavevmode\hypertarget{ref-Villani1991}{}%
+\leavevmode\hypertarget{ref-villani_genetic_1991}{}%
 12. Villani, F., Pigliucci, M., Benedettelli, S. \& Cherubini, M.
-Genetic differentiation among Turkish chestnut (
-\(\backslash\)textit\{Castanea sativa\} Mill.) populations.
-\emph{Heredity} \textbf{66,} 131--136 (1991).
+Genetic differentiation among Turkish chestnut (\emph{Castanea sativa}
+Mill.) Populations. \emph{Heredity} \textbf{66,} 131--136 (1991).
 
 
 \end{document}
