--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -33,8 +33,10 @@ csl: nature.csl
 
 Γιατί πρέπει να μελετηθεί η γεν. ποικ - διαφ
 
-Σημασία γενετικής ποικ Long term see introduction [@Pollegioni2011]
-Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 [@Ganopoulos2013]
+Σημασία γενετικής ποικ Long term see introduction [@pollegioni_long-term_2011]
+Selection may erode genetic diversity, which is a crucial factor for the success of breeding programs.
+
+Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 [@ganopoulos__2013]
   τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. 
 βοήθεια σε προγρ βελτίωσης: Γανό σελ 22
 
@@ -47,7 +49,7 @@ csl: nature.csl
 
 ## Θεωρητικό πλαίσιο
 
-Refugia - Gene flow - Long term [@Petit2003; @Petit2005]
+Refugia - Gene flow - Long term [@petit_comparative_2005; @petit_glacial_2003]
 Founder effect από ανθρω
 
 Δυο λόγια για τη διεθνή βιβλιογραφία. 
@@ -67,17 +69,17 @@ CTAB
 
 ### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
 10 SSR citation??? 
-θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη μελέτη πρόσφατων μικροεξελικτικών διαδικασιών [@Wang2010a]
+θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη μελέτη πρόσφατων μικροεξελικτικών διαδικασιών [@wang_recognizing_2010]
 Πώς θα γίνουν οι ομάδες multiplex --> diveRsity
 ABI3730xl σκοράρισμα --> GeneMapper
 
 ### Βασικές παράμετροι γενετικής ποικιλότητας 
 ΜΑΛΛΟΝ ΠΡΕΠΕΙ ΝΑ ΦΤΙΑΞΩ ΠΙΝΑΚΑ ΜΕ ΛΟΓΙΣΜΙΚΑ ΚΑΙ ΤΙ ΘΑ ΚΑΝΟΥΝ
-R [@RCoreTeam2018]
-adegenet [@Jombart2008]
-poppr [@Kamvar2014]
-hierfstat [@Goudet2005]
-genepop [@Rousset2008]
+R [@r_core_team_r:_2018]
+adegenet [@jombart_adegenet:_2008]
+poppr [@kamvar_poppr_2014]
+hierfstat [@goudet_hierfstat_2004]
+genepop [@rousset_genepop007:_2008]
 pegas
 ape
 fangorn
@@ -94,7 +96,7 @@ BOTTLENECK
 R Notebook - R markdown
 
 ### διαφοροποίηση
-Nei's Ds, Cav-Sf για φυλογενετικά [@Takezaki1996]
+Nei's Ds, Cav-Sf για φυλογενετικά [@takezaki_genetic_1996]
 F~ST~, G''~ST~, D~est~
 PCA, CA
 AMOVA
@@ -119,7 +121,7 @@ gene flow
 
 ## Χρηματοδότηση / Χρονοδιάγραμμα
 
-[@Villani1991]
+[@villani_genetic_1991]
 
 ## Βιβλιογραφία
 <!-- &nbsp;  -->
