--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -91,6 +91,21 @@
   \postdate{\par}
     \date{Οκτώβριος 2018}
 
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage[table]{xcolor}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
+
 \usepackage[greek]{babel}
 
 \begin{document}
@@ -100,13 +115,13 @@
 
 Γιατί πρέπει να μελετηθεί η γεν. ποικ - διαφ
 
-Σημασία γενετικής ποικ Long term see introduction\textsuperscript{1}
-Selection may erode genetic diversity, which is a crucial factor for the
-success of breeding programs.
+Σημασία γενετικής ποικ Long term see introduction (Pollegioni et al.,
+2011) Selection may erode genetic diversity, which is a crucial factor
+for the success of breeding programs.
 
-Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ
-19\textsuperscript{2} τι γίνεται με τους καστανεώνες, δες Πετρόπουλος.
-βοήθεια σε προγρ βελτίωσης: Γανό σελ 22
+Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 (Γανόπουλος,
+2013) τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. (Πετρόπουλος,
+2016) βοήθεια σε προγρ βελτίωσης: Γανό σελ 22
 
 Σημαντικό είδος γιατί\ldots{}
 
@@ -115,8 +130,8 @@ success of breeding programs.
 \hypertarget{-}{%
 \section{Θεωρητικό πλαίσιο}\label{-}}
 
-Refugia - Gene flow - Long term\textsuperscript{3,4} Founder effect από
-ανθρω
+Refugia - Gene flow - Long term (Petit et al., 2003, 2005) Founder
+effect από ανθρω
 
 Δυο λόγια για τη διεθνή βιβλιογραφία. Υπάρχει ή δεν υπάρχει ποικιλότητα;
 "Γενικα'έχει βρεθεί ότι \ldots{} {[}\ldots{}{]} Συγκεκριμένα στην
@@ -145,18 +160,53 @@ CTAB
 \hypertarget{---}{%
 \subsection{Αλυσιδωτή αντίδραση πολυμεράσης \& Γενοτύπηση}\label{---}}
 
-10 SSR citation??? θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη
-μελέτη πρόσφατων μικροεξελικτικών διαδικασιών\textsuperscript{5} Πώς θα
-γίνουν οι ομάδες multiplex --\textgreater{} diveRsity ABI3730xl
-σκοράρισμα --\textgreater{} GeneMapper
+\begin{table}
+
+\caption{\label{tab:unnamed-chunk-1}Group Rows}
+\centering
+\begin{tabular}[t]{l|r|r|r|r|r|r}
+\hline
+  & mpg & cyl & disp & hp & drat & wt\\
+\hline
+Mazda RX4 & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.620\\
+\hline
+Mazda RX4 Wag & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.875\\
+\hline
+Datsun 710 & 22.8 & 4 & 108.0 & 93 & 3.85 & 2.320\\
+\hline
+\multicolumn{7}{l}{\textbf{Group 1}}\\
+\hline
+\hspace{1em}Hornet 4 Drive & 21.4 & 6 & 258.0 & 110 & 3.08 & 3.215\\
+\hline
+\hspace{1em}Hornet Sportabout & 18.7 & 8 & 360.0 & 175 & 3.15 & 3.440\\
+\hline
+\hspace{1em}Valiant & 18.1 & 6 & 225.0 & 105 & 2.76 & 3.460\\
+\hline
+\hspace{1em}Duster 360 & 14.3 & 8 & 360.0 & 245 & 3.21 & 3.570\\
+\hline
+\multicolumn{7}{l}{\textbf{Group 2}}\\
+\hline
+\hspace{1em}Merc 240D & 24.4 & 4 & 146.7 & 62 & 3.69 & 3.190\\
+\hline
+\hspace{1em}Merc 230 & 22.8 & 4 & 140.8 & 95 & 3.92 & 3.150\\
+\hline
+\hspace{1em}Merc 280 & 19.2 & 6 & 167.6 & 123 & 3.92 & 3.440\\
+\hline
+\end{tabular}
+\end{table}
+
+3 SSR and 5 EST-SSR citation??? is it this citation? (Marinoni et al.,
+2003) θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη μελέτη
+πρόσφατων μικροεξελικτικών διαδικασιών (Wang, 2010) Πώς θα γίνουν οι
+ομάδες multiplex --\textgreater{} diveRsity ABI3730xl σκοράρισμα
+--\textgreater{} GeneMapper
 
 \hypertarget{---}{%
 \subsection{Βασικές παράμετροι γενετικής ποικιλότητας}\label{---}}
 
-ΜΑΛΛΟΝ ΠΡΕΠΕΙ ΝΑ ΦΤΙΑΞΩ ΠΙΝΑΚΑ ΜΕ ΛΟΓΙΣΜΙΚΑ ΚΑΙ ΤΙ ΘΑ ΚΑΝΟΥΝ
-R\textsuperscript{6} adegenet\textsuperscript{7}
-poppr\textsuperscript{8} hierfstat\textsuperscript{9}
-genepop\textsuperscript{10} pegas ape fangorn
+ΜΑΛΛΟΝ ΠΡΕΠΕΙ ΝΑ ΦΤΙΑΞΩ ΠΙΝΑΚΑ ΜΕ ΛΟΓΙΣΜΙΚΑ ΚΑΙ ΤΙ ΘΑ ΚΑΝΟΥΝ R (R Core
+Team, 2018) adegenet (Jombart, 2008) poppr (Kamvar et al., 2014)
+hierfstat (Goudet, 2005) genepop (Rousset, 2008) pegas ape fangorn
 
 αριθμός διαφορετικών γενοτύπων (multilocus genotypes) Allelic richness -
 indicator να σημειωθεί ML\_Null-Freq LGP Fst outliers --\textgreater{}
@@ -168,9 +218,9 @@ R Notebook - R markdown
 
 \subsection{διαφοροποίηση}
 
-Nei's Ds, Cav-Sf για φυλογενετικά\textsuperscript{11}
-F\textsubscript{ST}, G''\textsubscript{ST}, D\textsubscript{est} PCA, CA
-AMOVA φυλογενετική ape STRUCTURE DAPC
+Nei's Ds, Cav-Sf για φυλογενετικά F\textsubscript{ST},
+G''\textsubscript{ST}, D\textsubscript{est} PCA, CA AMOVA φυλογενετική
+ape STRUCTURE DAPC
 
 \hypertarget{-}{%
 \subsection{Γενετική τοπίου}\label{-}}
@@ -188,67 +238,84 @@ gene flow
 \hypertarget{-}{%
 \section{Χρηματοδότηση / Χρονοδιάγραμμα}\label{-}}
 
-\textsuperscript{12}
+(Villani et al., 1991)
 
 \section{Βιβλιογραφία}
 
 \hypertarget{refs}{}
-\leavevmode\hypertarget{ref-pollegioni_long-term_2011}{}%
-1. Pollegioni, P. \emph{et al.} Long-term human impacts on genetic
-structure of Italian walnut inferred by SSR markers. \emph{Tree Genetics
-\& Genomes} \textbf{7,} 707--723 (2011).
+\leavevmode\hypertarget{ref-goudet_hierfstat_2005}{}%
+Goudet, J., 2005. Hierfstat, a package for r to compute and test
+hierarchical F-statistics. Molecular Ecology Notes 5, 184--186.
+\url{https://doi.org/10.1111/j.1471-8286.2004.00828.x}
 
-\leavevmode\hypertarget{ref-ganopoulos__2013}{}%
-2. Ganopoulos, I. Διερεύνηση γενετικής ποικιλότητας, ταυτοποίηση και
-εφαρμογή λειτουργικών δεικτών στην κερασιά (\emph{Prunus avium} L.).
-(2013).
+\leavevmode\hypertarget{ref-Jombart2008}{}%
+Jombart, T., 2008. Adegenet: A R package for the multivariate analysis
+of genetic markers. Bioinformatics 24, 1403--1405.
+\url{https://doi.org/10.1093/bioinformatics/btn129}
 
-\leavevmode\hypertarget{ref-petit_comparative_2005}{}%
-3. Petit, R. J. \emph{et al.} Comparative organization of chloroplast,
-mitochondrial and nuclear diversity in plant populations.
-\emph{Molecular Ecology} \textbf{14,} 689--701 (2005).
-
-\leavevmode\hypertarget{ref-petit_glacial_2003}{}%
-4. Petit, R. J. \emph{et al.} Glacial refugia: Hotspots but not melting
-pots of genetic diversity. \emph{Science} \textbf{300,} 1563--1565
-(2003).
-
-\leavevmode\hypertarget{ref-wang_recognizing_2010}{}%
-5. Wang, I. J. Recognizing the temporal distinctions between landscape
-genetics and phylogeography. \emph{Molecular Ecology} \textbf{19,}
-2605--2608 (2010).
-
-\leavevmode\hypertarget{ref-r_core_team_r:_2018}{}%
-6. R Core Team. R: A Language and Environment for Statistical Computing.
-(2018).
-
-\leavevmode\hypertarget{ref-jombart_adegenet:_2008}{}%
-7. Jombart, T. Adegenet: A R package for the multivariate analysis of
-genetic markers. \emph{Bioinformatics} \textbf{24,} 1403--1405 (2008).
-
-\leavevmode\hypertarget{ref-kamvar_poppr_2014}{}%
-8. Kamvar, Z. N., Tabima, J. F. \& Grünwald, N. J. Poppr : An R package
+\leavevmode\hypertarget{ref-Kamvar2014}{}%
+Kamvar, Z.N., Tabima, J.F., Grünwald, N.J., 2014. Poppr : An R package
 for genetic analysis of populations with clonal, partially clonal,
-and/or sexual reproduction. \emph{PeerJ} \textbf{2,} e281 (2014).
+and/or sexual reproduction. PeerJ 2, e281.
+\url{https://doi.org/10.7717/peerj.281}
 
-\leavevmode\hypertarget{ref-goudet_hierfstat_2004}{}%
-9. Goudet, J. Hierfstat, a package for R to compute and test
-hierarchical F-statistics. (2004).
+\leavevmode\hypertarget{ref-marinoni_development_2003}{}%
+Marinoni, D., Akkak, A., Bounous, G., Edwards, K.J., Botta, R., 2003.
+Development and characterization of microsatellite markers in Castanea
+sativa (Mill.). Molecular Breeding 11, 127--136.
+\url{https://doi.org/10.1023/A:1022456013692}
 
-\leavevmode\hypertarget{ref-rousset_genepop007:_2008}{}%
-10. Rousset, F. Genepop'007: A complete re-implementation of the genepop
-software for Windows and Linux. \emph{Molecular Ecology Resources}
-\textbf{8,} 103--106 (2008).
+\leavevmode\hypertarget{ref-Petit2003}{}%
+Petit, R.J., Aguinagalde, I., De Beaulieu, J.L., Bittkau, C., Brewer,
+S., Cheddadi, R., Ennos, R., Fineschi, S., Grivet, D., Lascoux, M.,
+Mohanty, A., Müller-Starck, G., Demesure-Musch, B., Palmé, A., Martín,
+J.P., Rendell, S., Vendramin, G.G., 2003. Glacial refugia: Hotspots but
+not melting pots of genetic diversity. Science 300, 1563--1565.
+\url{https://doi.org/10.1126/science.1083264}
 
-\leavevmode\hypertarget{ref-takezaki_genetic_1996}{}%
-11. Takezaki, N. \& Nei, M. Genetic distances and the setting of
-conservation priorities. \emph{Biological Conservation} \textbf{75,} 311
-(1996).
+\leavevmode\hypertarget{ref-Petit2005}{}%
+Petit, R.J., Duminil, J., Fineschi, S., Hampe, A., Salvini, D.,
+Vendramin, G.G., 2005. Comparative organization of chloroplast,
+mitochondrial and nuclear diversity in plant populations. Molecular
+Ecology 14, 689--701.
+\url{https://doi.org/10.1111/j.1365-294X.2004.02410.x}
 
-\leavevmode\hypertarget{ref-villani_genetic_1991}{}%
-12. Villani, F., Pigliucci, M., Benedettelli, S. \& Cherubini, M.
-Genetic differentiation among Turkish chestnut (\emph{Castanea sativa}
-Mill.) Populations. \emph{Heredity} \textbf{66,} 131--136 (1991).
+\leavevmode\hypertarget{ref-Pollegioni2011}{}%
+Pollegioni, P., Woeste, K., Olimpieri, I., Marandola, D., Cannata, F.,
+Emilia Malvolti, M., 2011. Long-term human impacts on genetic structure
+of Italian walnut inferred by SSR markers. Tree Genetics \& Genomes 7,
+707--723. \url{https://doi.org/10.1007/s11295-011-0368-4}
+
+\leavevmode\hypertarget{ref-RCoreTeam2018}{}%
+R Core Team, 2018. R: A Language and Environment for Statistical
+Computing.
+
+\leavevmode\hypertarget{ref-Rousset2008}{}%
+Rousset, F., 2008. Genepop'007: A complete re-implementation of the
+genepop software for Windows and Linux. Molecular Ecology Resources 8,
+103--106. \url{https://doi.org/10.1111/j.1471-8286.2007.01931.x}
+
+\leavevmode\hypertarget{ref-Villani1991}{}%
+Villani, F., Pigliucci, M., Benedettelli, S., Cherubini, M., 1991.
+Genetic differentiation among Turkish chestnut (\emph{Castanea}
+\emph{Sativa} Mill.) Populations. Heredity 66, 131--136.
+\url{https://doi.org/10.1038/hdy.1991.16}
+
+\leavevmode\hypertarget{ref-Wang2010a}{}%
+Wang, I.J., 2010. Recognizing the temporal distinctions between
+landscape genetics and phylogeography. Molecular Ecology 19, 2605--2608.
+\url{https://doi.org/10.1111/j.1365-294X.2010.04715.x}
+
+\leavevmode\hypertarget{ref-__2013}{}%
+Γανόπουλος, Ι., 2013. Διερεύνηση γενετικής ποικιλότητας, ταυτοποίηση και
+εφαρμογή λειτουργικών δεικτών στην κερασιά (\emph{Prunus} \emph{Avium}
+L.) (Διδακτορική Διατριβή). Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης.
+
+\leavevmode\hypertarget{ref-2016a}{}%
+Πετρόπουλος, Σ., 2016. Γενετική ποικιλότητα συμπατρικών πληθυσμών
+καστανιας (\emph{Castanea Sativa} Mill.) και των καρποφάγων εντόμων
+αυτής (Mεταπτυχιακή Διατριβή). Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης,
+Θεσσαλονίκη.
 
 
 \end{document}
