tweaks to template table

--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -164,14 +164,12 @@ CTAB
 
 \caption{\label{tab:unnamed-chunk-1}Group Rows}
 \centering
-\begin{tabular}[t]{l|r|r|r|r|r|r}
+\begin{tabular}[t]{l r r r r r r}
 \hline
   & mpg & cyl & disp & hp & drat & wt\\
 \hline
 Mazda RX4 & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.620\\
-\hline
 Mazda RX4 Wag & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.875\\
-\hline
 Datsun 710 & 22.8 & 4 & 108.0 & 93 & 3.85 & 2.320\\
 \hline
 \multicolumn{7}{l}{\textbf{Group 1}}\\
