--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -164,12 +164,14 @@ CTAB
 
 \caption{\label{tab:unnamed-chunk-1}Group Rows}
 \centering
-\begin{tabular}[t]{l r r r r r r}
+\begin{tabular}[t]{l|r|r|r|r|r|r}
 \hline
   & mpg & cyl & disp & hp & drat & wt\\
 \hline
 Mazda RX4 & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.620\\
+\hline
 Mazda RX4 Wag & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.875\\
+\hline
 Datsun 710 & 22.8 & 4 & 108.0 & 93 & 3.85 & 2.320\\
 \hline
 \multicolumn{7}{l}{\textbf{Group 1}}\\
@@ -223,9 +225,10 @@ ape STRUCTURE DAPC
 \hypertarget{-}{%
 \subsection{Γενετική τοπίου}\label{-}}
 
-γονιδιακή ροη - Nm=1/4FSt και MIGRATE IBD - mantel test - adegenet, ape
-Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's algorithm sPCA
-Geneland DIYABC ??? GeneClass2 ???
+δες οπωσδήποτε (Leonarduzzi et al., 2016) γονιδιακή ροη - Nm=1/4FSt και
+MIGRATE IBD - mantel test - adegenet, ape Genetic boundaries γενετικά
+φράγματα φραγμοί- Monmonier's algorithm sPCA Geneland DIYABC ???
+GeneClass2 ???
 
 \hypertarget{-}{%
 \section{Αναμενόμενα αποτελέσματα}\label{-}}
@@ -256,6 +259,12 @@ Kamvar, Z.N., Tabima, J.F., Grünwald, N.J., 2014. Poppr : An R package
 for genetic analysis of populations with clonal, partially clonal,
 and/or sexual reproduction. PeerJ 2, e281.
 \url{https://doi.org/10.7717/peerj.281}
+
+\leavevmode\hypertarget{ref-Leonarduzzi2016a}{}%
+Leonarduzzi, C., Piotti, A., Spanu, I., Vendramin, G.G., 2016. Effective
+gene flow in a historically fragmented area at the southern edge of
+silver fir (Abies alba Mill.) Distribution. Tree Genetics \& Genomes 12,
+95. \url{https://doi.org/10.1007/s11295-016-1053-4}
 
 \leavevmode\hypertarget{ref-marinoni_development_2003}{}%
 Marinoni, D., Akkak, A., Bounous, G., Edwards, K.J., Botta, R., 2003.
